# cs455-gpu-cluster-proj

./: .gitignore  CMakeLists.txt  README.md  hostfile.2  log.txt
project/v0_ipynb/: README.md  requirements.txt  yolov8_test.ipynb
project/v1_serial/: CMakeLists.txt
project/v1_serial/include/: .layer_structs.h.kate-swp  layer_structs.h  prepostproc.h  serial_funcs.h
project/v1_serial/src/: layer_structs.cpp  main.cpp  prepostproc.cpp  serial_funcs.cpp
project/v1_serial_poc/: alloc_order.txt
project/v1_serial_poc/src/: main.cpp
project/v2_MPI_only/: CMakeLists.txt
project/v2_MPI_only/include/: prepostproc.h
project/v2_MPI_only/src/: main.cpp  prepostproc.cpp  serial_funcs.cpp
project/v3_CUDA_only/: yolov8_cuda
project/v3_CUDA_only/include/: CUDA_kernel.h  cuda_layers.h
project/v3_CUDA_only/src/: cudav3.cu  cudav3test.cu  main.cpp  serial_funcs.cpp
project/v4_MPI_CUDA/: CMakeLists.txt
project/v4_MPI_CUDA/include/: layer_structs.h  model.h  preprocess.h
project/v4_MPI_CUDA/src/: layer_structs.cpp  main.cpp  model.cu  preprocess.cpp
